[2014-06-20]
Replace the built-in function `textureCube' with `texture' in RendererAboveWater.frag and RendererUnderWater.frag so that it works on Nvidia video cards.