@@ -7,8 +7,8 @@ uniform mat4 LIGHTGLgl_ModelViewProjectionMatrix;
 
 uniform sampler2D texture;
 uniform vec2 delta;
-varying vec2 coord;
-
+in vec2 coord;
+out vec4 outputF;
 void main() {
     /* get vertex info */
     vec4 info = texture2D(texture, coord);
@@ -18,5 +18,5 @@ void main() {
     vec3 dy = vec3(0.0, texture2D(texture, vec2(coord.x, coord.y + delta.y)).r - info.r, delta.y);
     info.ba = normalize(cross(dy, dx)).xz;
 
-    gl_FragColor = info;
+    outputF = info;
 }
