@@ -7,8 +7,8 @@ uniform mat4 LIGHTGLgl_ModelViewProjectionMatrix;
 
 uniform sampler2D texture;
 uniform vec2 delta;
-varying vec2 coord;
-
+in vec2 coord;
+out vec4 outputF;
 void main() {
 	/* get vertex info */
 	vec4 info = texture2D(texture, coord);
@@ -32,5 +32,5 @@ void main() {
 	/* move the vertex along the velocity */
 	info.r += info.g;
 
-	gl_FragColor = info;
+	outputF = info;
 }
